Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81805

StaticFlags is missing values

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.0 Alpha, 5.15
    • 5.15
    • Quick: 3D
    • None
    • 4089cd92931a5b58bd04e4aa9e296df28b944600 (qt/qtquick3d/5.15)
    • Qt Quick 3D - Week 5/6

      The added StaticFlags enum should have some values, otherwise it causes problems: "Expected expression after colon (when opening some unrelated project in Qt Creator, e.g. Designer)"

        For Gerrit Dashboard: QTBUG-81805
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes