Add initial enum value for StaticFlags

Fixes: QTBUG-81805
Change-Id: If84ff00e4d67a25cdca2611f4292d8e678562402
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>